# humanboard

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PDFiumConfig.cmake  PLAN.md  RAMBLINGS.md  UI_UX_AUDIT_REPORT.md  build-app.sh  fetch_all_deepwiki.py  state.json  zed-deepwiki-index.md
.beads/: issues.jsonl
assets/: AppIcon.icns
src/: actions.rs  animations.rs  app.rs  audio_webview.rs  background.rs  board.rs  board_index.rs  command_palette.rs  command_registry.rs  constants.rs  error.rs  focus.rs  focus_ring.rs  history.rs  hit_testing.rs  home.rs  input.rs  landing.rs  lib.rs  linux_webview.rs  loading.rs  main.rs  markdown_card.rs  notifications.rs  onboarding.rs  pdf.rs  pdf_thumbnail.rs  pdf_webview.rs  perf.rs  persistence.rs  preview.rs  render.rs  selection.rs  settings.rs  settings_watcher.rs  spatial.rs  spotify_auth.rs  spotify_webview.rs  types.rs  validation.rs  (+2 more)
src/app/: board_management.rs  command_palette_methods.rs  error_recovery.rs  lifecycle.rs  mod.rs  preview_core.rs  preview_panes.rs  preview_search.rs  preview_tabs.rs  preview_webviews.rs  settings_methods.rs  state.rs  textbox.rs  types.rs
src/input/: drag.rs  mod.rs  mouse_down.rs  mouse_up.rs  transform.rs
src/render/: canvas.rs  dock.rs  mod.rs  overlays.rs  preview.rs  ui.rs
src/render/overlays/: create_board.rs  (+8 more)
tests/: board_tests.rs  integration.rs  unit.rs
tests/integration/: board_workflow_tests.rs  event_flow_tests.rs  keyboard_nav_tests.rs  selection_tests.rs  state_management_tests.rs  theming_tests.rs  undo_redo_tests.rs
tests/unit/: background_tests.rs  board_index_tests.rs  command_registry_tests.rs  focus_tests.rs  hit_testing_tests.rs  loading_tests.rs  notifications_tests.rs  perf_tests.rs  selection_tests.rs  settings_watcher_tests.rs  types_tests.rs  validation_tests.rs
themes/: high-contrast.json
zed-deepwiki-docs/: 1-overview.md  10-vim-mode.md  10.1-mode-state-machine.md  10.2-operators-motions-and-objects.md  10.3-visual-mode.md  10.4-helix-mode-integration.md  11-ai-agent-system.md  11.1-agent-communication-protocol-acp.md  11.2-agent-ui-and-thread-management.md  11.3-agent-connection-and-implementations.md  11.4-tool-system.md  11.5-mention-system-and-context.md  11.6-legacy-agent-thread-system.md  12-remote-development-and-collaboration.md  12.1-local-vs-remote-architecture.md  12.2-remote-project-architecture.md  12.3-collaboration-features.md  12.4-crdt-and-synchronization.md  2-core-architecture.md  2.1-application-initialization-and-lifecycle.md  2.2-gpui-framework.md  2.3-window-and-platform-abstraction.md  2.4-event-flow-and-input-handling.md  2.5-keybinding-and-action-system.md  2.6-focus-management-and-hit-testing.md  3-editor-architecture.md  3.1-editor-component-and-ui.md  3.2-buffer-system-and-text-storage.md  3.3-display-pipeline-and-rendering.md  3.4-selections-and-editing-operations.md  3.5-code-intelligence-integration.md  3.6-diff-integration.md  4-workspace-and-panel-system.md  4.1-workspace-organization.md  4.2-item-system-and-lifecycle.md  4.3-pane-management.md  4.4-search-system.md  5-project-management.md  5.1-project-orchestration.md  5.2-worktree-and-file-system.md  (+20 more)
