[package]
name = "humanboard"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
image = "0.25"
gpui-component = { version = "0.5", features = ["webview", "tree-sitter-languages"] }
wry = { version = "0.53.3", package = "lb-wry" }
raw-window-handle = "0.6"
pdfium-render = { version = "0.8", features = ["image"] }
tiny_http = "0.12"
pulldown-cmark = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
open = "5.0"
lofty = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


[package.metadata.bundle]
name = "Humanboard"
identifier = "com.manavpanchal.humanboard"
# icon = ["assets/icon.icns"]  # or icon.png
version = "0.1.0"
copyright = "Copyright © 2025"
category = "Productivity"
short_description = "A moodboard app"
resources = ["assets", "themes", "lib"]
